# UNIPAR

./: CMakeLists.txt  LICENSE  README.md  all2all.cu  bitkmer.c  bitkmer.cuh  comm.c  comm.cu  comm.cuh  contig.c  contig.cu  contig.cuh  dbgraph.c  dbgraph.cu  dbgraph.cuh  distribute.c  hash.c  hash.cuh  io.c  main.c  malloc.c  malloc.cuh  msp.c  msp.cu  pio.c  preprocess.c  preprocess.cu  preprocess.cuh  share.c  share.cu  tbbsort.cpp
hash/: CMakeLists.txt
include/: bitkmer.h  comm.h  contig.h  dbgraph.h  distribute.h  graph.h  hash.h  io.h  malloc.h  msp.h  preprocess.h  scan.cu  share.h  utility.h
src/: all2all.cu  bitkmer.c  bitkmer.cuh  comm.c  comm.cu  comm.cuh  contig.c  contig.cu  contig.cuh  dbgraph.c  dbgraph.cu  dbgraph.cuh  distribute.c  hash.c  hash.cuh  io.c  main.c  makefile  malloc.c  malloc.cuh  msp.c  msp.cu  pio.c  preprocess.c  preprocess.cu  preprocess.cuh  share.c  share.cu  share.cuh  tbbsort.cpp
sub/: CMakeLists.txt
